Add start script for Railway deployment

--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "liveticker",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^11.10.0",
