--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "start": "node server.js",
     "postinstall": "npm rebuild better-sqlite3 --build-from-source"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "better-sqlite3": {
+    "napi_versions": [6]
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^11.10.0",
