--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
   "name": "liveticker",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "postinstall": "npm rebuild better-sqlite3 --build-from-source"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   },
   "better-sqlite3": {
     "napi_versions": [6]
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "better-sqlite3": "^11.10.0",
+    "bcrypt": "^5.1.1",
+    "better-sqlite3": "^8.6.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.7.0",
-    "puppeteer": "^24.10.1",
+    "puppeteer": "^21.11.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "sqlite3": "^5.1.7",
     "ws": "^8.18.2"
   }
 }
