Fix Railway deployment: Move better-sqlite3 to optionalDependencies, create environment check script, update server.js to handle dependencies properly

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-# Force better-sqlite3 to build from source
-better_sqlite3_binary=false
+# Skip optional dependencies in production
+production=true
