--- a/package.json
+++ b/package.json
@@ -5,20 +5,16 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "npm rebuild better-sqlite3 --build-from-source"
+    "postinstall": "node scripts/check-env.js"
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "better-sqlite3": {
-    "napi_versions": [6]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "better-sqlite3": "^8.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -28,5 +24,8 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "sqlite3": "^5.1.7",
     "ws": "^8.18.2"
+  },
+  "optionalDependencies": {
+    "better-sqlite3": "^8.6.0"
   }
 }
