Switch to custom Dockerfile for Railway deployment to avoid build timeouts

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,14 @@
 # Skip optional dependencies in production
 production=true
+fund=false
+audit=false
+optional=false
+progress=false
+update-notifier=false
+fetch-retries=5
+fetch-retry-factor=2
+fetch-retry-mintimeout=10000
+fetch-retry-maxtimeout=60000
+cache-min=3600
+preferOffline=true
+ignore-scripts=true
