--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "node scripts/check-env.js"
+    "start": "node server.js"
   },
   "engines": {
     "node": ">=18.0.0"
